# ccc

./: .dockerignore  .gitignore  .pre-commit-config.yaml  09-n_samples_large_100000.txt  09-n_samples_large_50000.txt  09-n_samples_small_100.txt  09-n_samples_small_1000.txt  09-n_samples_small_50.txt  09-n_samples_small_500.txt  CMakeLists.txt  Dockerfile  LICENSE  LICENSE_bundled  README.md  entrypoint.sh  old_CMakeLists.txt  old_setup.py  pyproject.toml  setup.cfg  setup.py  setup_dev.sh
.github/workflows/: lint.yaml  pytest.yaml
benchmark/: bench_ari.py  cprofile.py  trace.py
docs/source/: conf.py  index.rst
environment/: README.md  environment-cuda.yml  environment.yml
environment/scripts/: environment_base.yml  install_other_packages.sh  install_r_packages.r  setup_data.py  setup_environment.sh
libs/ccc/: __init__.py  coef.py  conf.py  corr.py  log.py  plots.py  pyproject.toml
libs/ccc/coef/: __init__.py  impl.py  impl_gpu.py
libs/ccc/cuda_ext/: CMakeLists.txt  metrics.cu  metrics_binder.cpp
libs/ccc/cuda_ext/tests/: test_kernel.cpp
libs/ccc/scipy/: stats.py
libs/ccc/sklearn/: CMakeLists.txt  Makefile  Readme.md  metrics.cu  metrics.cuh  metrics.py  metrics_device.py  metrics_gpu.py  metrics_gpu2.py  test_kernel.cpp  test_partition_pairing.cpp
libs/ccc/utils/: __init__.py  utility_functions.py
libs/ccc_cuda_ext/: CMakeLists.txt  Readme.md  binder.cu  cub.cu  metrics.cu  metrics.cuh
libs/ccc_cuda_ext/tests/: test_binder.py  test_kernel.cpp
libs/clustermatch/: clustering.py  coef.py  conf.py  corr.py  gene_enrich.py  giant.py  log.py  log_config.yaml  methods.py  metrics.py  plots.py  settings.py  utils.py
libs/clustermatch/pytorch/: core.py
libs/clustermatch/scipy/: stats.py
libs/clustermatch/sklearn/: metrics.py
libs/cuda_ext/: binder.cu  example.cpp  example.hpp  example_binder.cpp  metrics.cu  metrics.cuh
libs/cuda_ext/tests/: test_binder.py
nbs/: .jupytext  run_nbs.sh
nbs/04_clustermatch_profiling/: 04-cm_ari_sklearn.txt  04-compare_numba_ari.ipynb  05-cm_precompute_parts_false.txt  05-cm_precompute_parts_true.txt  05-compare_precomputing_of_parts.ipynb  06-cm_many_genes.txt  06-many_genes.ipynb  07-cm_many_samples-default_internal_n_clusters.txt  07-cm_many_samples-less_internal_n_clusters.txt  07-cm_many_samples.txt  07-many_samples.ipynb
nbs/04_clustermatch_profiling/py/: 04-compare_numba_ari.py  05-compare_precomputing_of_parts.py  06-many_genes.py  (+1 more)
nbs/05_preprocessing/: 00-gtex_v8-split_by_tissue.ipynb  03-gtex_v8-entrez_gene_ids_map.ipynb  05-gtex_v8-select_top_genes.ipynb  07-gtex_v8-metadata.ipynb  10-recount2_multiplier-format.ipynb  10-understudied_genes.ipynb  15-recount2_full-download.ipynb  15-recount2_full-download_and_preprocess.ipynb  16-recount2_full-preprocess.ipynb  20-recount2_full-select_top_genes.ipynb
nbs/15_clustering/: 05_01-spectral_clustering-clustermatch.ipynb  05_02-spectral_clustering-pearson.ipynb
nbs/15_intersections/: 03-gtex_whole_blood-intersections.ipynb  05-sample_intersections.ipynb  05_05-gtex_whole_blood-sample_intersections-stratified.ipynb  10-compute_mic.ipynb
nbs/20_comparison_others/: 03_02-gtex_whole_blood-sample_all_gene_pairs.ipynb  03_05-gtex_whole_blood-sample_intersections-agreements.ipynb  03_07-gtex_whole_blood-sample_intersections-disagreements.ipynb  05_02-gtex_whole_blood-sample_all_gene_pairs-mic.ipynb  05_05-gtex_whole_blood-sample_intersections-agreements-mic.ipynb  05_07-gtex_whole_blood-sample_intersections-disagreements-mic.ipynb  50-combine_all.ipynb  55-gtex_whole_blood-intersections-mic.ipynb  60-time_test-1_cpu_core.ipynb  61-time_test-3_cpu_cores.ipynb  62-time_test-6_cpu_cores.ipynb
nbs/20_gene_set_enrichment/: 10_00-clustermatch-go_enrichment.ipynb  10_05-pearson-go_enrichment.ipynb  10_99-analysis_go_enrichment.ipynb  15_00-clustermatch-reactome_enrichment.ipynb  15_05-pearson-reactome_enrichment.ipynb  15_99-analysis_reactome_enrichment.ipynb
nbs/25_categorical_data/: 05-download-rice_data.ipynb  10-rice_gene_expr.ipynb
nbs/25_pvalue/: 00-ccc_pvalue_dist-generate-data_matrix.ipynb  00-ccc_pvalue_dist-generate.ipynb  00-ccc_pvalue_dist.ipynb  01-ccc_pvalue_dist-generate-gene_pairs.ipynb  01-ccc_pvalue_dist-plot.ipynb  05-ccc_pvalue_dist-plot.ipynb  05-sample_gene_pair_categories.ipynb  10-sample_gene_pair_categories.ipynb  15-compute_pvalues_from_samples.ipynb  17-adjust_pvalues_fdr.ipynb  19-analyze_significant_pairs.ipynb
nbs/30_gan/: analysis.ipynb
nbs/99_clustermatch_profiling/: README.md
nbs/99_manuscript/: 05_00-gtex-coefficients-analyses.ipynb  08_00-clustering-analyses.ipynb  08_00-gtex-clustering-analyses.ipynb  09_00-recount2-clustering-analyses.ipynb  10_00-gene_enrich-analyses.ipynb  10_00-gtex-gene_enrich-analyses.ipynb  10_05-gtex-enrichKEGG-analyses.ipynb  10_05-gtex-gene_set_enrichment-analyses.ipynb  11_00-recount2-gene_enrich-analyses.ipynb
scripts/: clean_git_lfs.sh  convert_go_structure.py  convert_ipynb_to_py.sh  create_docker_image.sh  env.sh  jupytext_sync.sh  rsync.sh  run_docker.sh  run_docker_dev.sh  run_nbs_server.sh  run_tests.sh  setup_dev.sh  styler.r  touch_pys.sh
tests/: README.md  test_coef.py  test_coef_pval.py  test_conf.py  test_corr.py  test_gene_enrich.py  test_giant.py  test_log.py  test_methods.py  test_metrics.py  test_plots.py  test_pytorch_core.py  test_scipy_stats.py  test_sklearn_metrics.py  test_utils.py
tests/clustermatch/: test_coef.py  test_quantiles_clustering.py
tests/cuda_ext/: test_ari.cpp  test_ari_py.cpp  test_ari_random.cpp  test_kernel.cpp
tests/data/: README.md  ccc-example-coef.pkl  ccc-example-data.pkl  clustermatch-random_data-coef.pkl  clustermatch-random_data-data.pkl  file.txt
tests/gpu/: feature_array.txt  sctrach.py  test_ari.py  test_ari_device.py  test_ari_gpu.py  test_binding.py  test_coef.py  test_compute_coef.py  test_cuml.py  test_cupy.py  test_device_host_funcs.py  test_get_parts.py  test_get_parts_debug.py  test_get_percentiles.py  test_impl_gpu.py  test_impl_gpu_against_impl.py  test_kernel.py  test_sklearn_metrics.py  test_sklearn_metrics_gpu.py  utils.py
(+541 files in other folders)
